--- a/stories/index.html
+++ b/stories/index.html
@@ -1578,6 +1578,12 @@
   </thead>
   <tbody>
     <tr>
+      <td>0002</td>
+      <td><a href="/stories/nl/0002_kijk-naar-de-dieren_slides.html" target="_blank">Kijk naar de dieren</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0002"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0003</td>
       <td><a href="/stories/nl/0003_school-kleding_slides.html" target="_blank">School kleding</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1590,10 +1596,22 @@
       <td><a name="nl0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0009</td>
+      <td><a href="/stories/nl/0009_waar-is-mijn-poes_slides.html" target="_blank">Waar is mijn poes?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0011</td>
       <td><a href="/stories/nl/0011_nsangabisibe-en-mudduawulira_slides.html" target="_blank">Nsangabisibe en Mudduawulira</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="nl0011"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0067</td>
+      <td><a href="/stories/nl/0067_koken_slides.html" target="_blank">Koken</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0106</td>
@@ -1606,6 +1624,12 @@
       <td><a href="/stories/nl/0112_mijn-lichaam_slides.html" target="_blank">Mijn lichaam</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="nl0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0129</td>
+      <td><a href="/stories/nl/0129_lui-broertje_slides.html" target="_blank">Lui broertje</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0136</td>
@@ -6673,7 +6697,7 @@
       <td>0002</td>
       <td><a href="http://africanstorybook.org/stories/look-animals">Look at the animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0002">ar</a>, <a href="#bn0002">bn</a>, <a href="#da0002">da</a>, <a href="#de0002">de</a>, <a href="#eo0002">eo</a>, <a href="#es0002">es</a>, <a href="#fa0002">fa</a>, <a href="#gu0002">gu</a>, <a href="#hi0002">hi</a>, <a href="#hu0002">hu</a>, <a href="#it0002">it</a>, <a href="#ja0002">ja</a>, <a href="#ko0002">ko</a>, <a href="#nb0002">nb</a>, <a href="#nn0002">nn</a>, <a href="#pa0002">pa</a>, <a href="#pl0002">pl</a>, <a href="#ru0002">ru</a>, <a href="#tl0002">tl</a>, <a href="#tr0002">tr</a>, <a href="#ur0002">ur</a>, <a href="#vi0002">vi</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
+      <td><a href="#ar0002">ar</a>, <a href="#bn0002">bn</a>, <a href="#da0002">da</a>, <a href="#de0002">de</a>, <a href="#eo0002">eo</a>, <a href="#es0002">es</a>, <a href="#fa0002">fa</a>, <a href="#gu0002">gu</a>, <a href="#hi0002">hi</a>, <a href="#hu0002">hu</a>, <a href="#it0002">it</a>, <a href="#ja0002">ja</a>, <a href="#ko0002">ko</a>, <a href="#nb0002">nb</a>, <a href="#nl0002">nl</a>, <a href="#nn0002">nn</a>, <a href="#pa0002">pa</a>, <a href="#pl0002">pl</a>, <a href="#ru0002">ru</a>, <a href="#tl0002">tl</a>, <a href="#tr0002">tr</a>, <a href="#ur0002">ur</a>, <a href="#vi0002">vi</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
     </tr>
     <tr>
       <td>0003</td>
@@ -6709,7 +6733,7 @@
       <td>0009</td>
       <td><a href="http://africanstorybook.org/stories/where-my-cat">Where is my cat?</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0009">aeb</a>, <a href="#ar0009">ar</a>, <a href="#bn0009">bn</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#es0009">es</a>, <a href="#fa0009">fa</a>, <a href="#gu0009">gu</a>, <a href="#hi0009">hi</a>, <a href="#hu0009">hu</a>, <a href="#it0009">it</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#ko0009">ko</a>, <a href="#nb0009">nb</a>, <a href="#nn0009">nn</a>, <a href="#pa0009">pa</a>, <a href="#pl0009">pl</a>, <a href="#ru0009">ru</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#tr0009">tr</a>, <a href="#ur0009">ur</a>, <a href="#vi0009">vi</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
+      <td><a href="#aeb0009">aeb</a>, <a href="#ar0009">ar</a>, <a href="#bn0009">bn</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#es0009">es</a>, <a href="#fa0009">fa</a>, <a href="#gu0009">gu</a>, <a href="#hi0009">hi</a>, <a href="#hu0009">hu</a>, <a href="#it0009">it</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#ko0009">ko</a>, <a href="#nb0009">nb</a>, <a href="#nl0009">nl</a>, <a href="#nn0009">nn</a>, <a href="#pa0009">pa</a>, <a href="#pl0009">pl</a>, <a href="#ru0009">ru</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#tr0009">tr</a>, <a href="#ur0009">ur</a>, <a href="#vi0009">vi</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
     </tr>
     <tr>
       <td>0010</td>
@@ -6787,7 +6811,7 @@
       <td>0067</td>
       <td><a href="http://africanstorybook.org/stories/cooking">Cooking</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0067">ar</a>, <a href="#bn0067">bn</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#hu0067">hu</a>, <a href="#it0067">it</a>, <a href="#ja0067">ja</a>, <a href="#ko0067">ko</a>, <a href="#nb0067">nb</a>, <a href="#nn0067">nn</a>, <a href="#pa0067">pa</a>, <a href="#pl0067">pl</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#ur0067">ur</a>, <a href="#vi0067">vi</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+      <td><a href="#ar0067">ar</a>, <a href="#bn0067">bn</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#hu0067">hu</a>, <a href="#it0067">it</a>, <a href="#ja0067">ja</a>, <a href="#ko0067">ko</a>, <a href="#nb0067">nb</a>, <a href="#nl0067">nl</a>, <a href="#nn0067">nn</a>, <a href="#pa0067">pa</a>, <a href="#pl0067">pl</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#ur0067">ur</a>, <a href="#vi0067">vi</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
     </tr>
     <tr>
       <td>0068</td>
@@ -6931,7 +6955,7 @@
       <td>0129</td>
       <td><a href="http://africanstorybook.org/stories/lazy-little-brother">Lazy little brother</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0129">ar</a>, <a href="#bn0129">bn</a>, <a href="#de0129">de</a>, <a href="#es0129">es</a>, <a href="#fa0129">fa</a>, <a href="#gu0129">gu</a>, <a href="#hi0129">hi</a>, <a href="#hu0129">hu</a>, <a href="#it0129">it</a>, <a href="#ja0129">ja</a>, <a href="#ko0129">ko</a>, <a href="#nb0129">nb</a>, <a href="#nn0129">nn</a>, <a href="#pa0129">pa</a>, <a href="#pl0129">pl</a>, <a href="#tl0129">tl</a>, <a href="#tr0129">tr</a>, <a href="#ur0129">ur</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
+      <td><a href="#ar0129">ar</a>, <a href="#bn0129">bn</a>, <a href="#de0129">de</a>, <a href="#es0129">es</a>, <a href="#fa0129">fa</a>, <a href="#gu0129">gu</a>, <a href="#hi0129">hi</a>, <a href="#hu0129">hu</a>, <a href="#it0129">it</a>, <a href="#ja0129">ja</a>, <a href="#ko0129">ko</a>, <a href="#nb0129">nb</a>, <a href="#nl0129">nl</a>, <a href="#nn0129">nn</a>, <a href="#pa0129">pa</a>, <a href="#pl0129">pl</a>, <a href="#tl0129">tl</a>, <a href="#tr0129">tr</a>, <a href="#ur0129">ur</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
     </tr>
     <tr>
       <td>0130</td>
