--- a/stories/index.html
+++ b/stories/index.html
@@ -1679,6 +1679,12 @@
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="nl0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
+    <tr>
+      <td>0342</td>
+      <td><a href="/stories/nl/0342_straf_slides.html" target="_blank">Straf</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0342"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
   </tbody>
 </table>
 
@@ -7285,7 +7291,7 @@
       <td>0342</td>
       <td><a href="http://africanstorybook.org/stories/punishment">Punishment</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0342">ar</a>, <a href="#bn0342">bn</a>, <a href="#de0342">de</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#hu0342">hu</a>, <a href="#it0342">it</a>, <a href="#ja0342">ja</a>, <a href="#ko0342">ko</a>, <a href="#nb0342">nb</a>, <a href="#nn0342">nn</a>, <a href="#pa0342">pa</a>, <a href="#pl0342">pl</a>, <a href="#tl0342">tl</a>, <a href="#tr0342">tr</a>, <a href="#ur0342">ur</a>, <a href="#vi0342">vi</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
+      <td><a href="#ar0342">ar</a>, <a href="#bn0342">bn</a>, <a href="#de0342">de</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#hu0342">hu</a>, <a href="#it0342">it</a>, <a href="#ja0342">ja</a>, <a href="#ko0342">ko</a>, <a href="#nb0342">nb</a>, <a href="#nl0342">nl</a>, <a href="#nn0342">nn</a>, <a href="#pa0342">pa</a>, <a href="#pl0342">pl</a>, <a href="#tl0342">tl</a>, <a href="#tr0342">tr</a>, <a href="#ur0342">ur</a>, <a href="#vi0342">vi</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
     </tr>
     <tr>
       <td>0359</td>
