--- a/stories/nl/0120_haar_slides.html
+++ b/stories/nl/0120_haar_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Å lage mat - Global African Storybook</title>
+  <title>Haar - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="å-lage-mat" class="slide level1">
-<h1>Å lage mat</h1>
+<section id="haar" class="slide level1">
+<h1>Haar</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/02.jpg" /></p>
-<p>Jeg skreller potetene.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/02.jpg" /></p>
+<p>Thuli heeft kort haar.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/03.jpg" /></p>
-<p>Jeg hakker opp et kålhode.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/03.jpg" /></p>
+<p>Anna heeft lang haar.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/04.jpg" /></p>
-<p>Jeg river gulrøttene.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/04.jpg" /></p>
+<p>Cathy heeft het langste haar.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/05.jpg" /></p>
-<p>Jeg vasker bønnene.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/05.jpg" /></p>
+<p>Zama heeft haar haar gevlochten.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/06.jpg" /></p>
-<p>Jeg kutter opp gresskaret.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/06.jpg" /></p>
+<p>Baba heeft een baard.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/07.jpg" /></p>
-<p>Jeg hakker spinaten.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/07.jpg" /></p>
+<p>Zanele heeft haar haar gekamd.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/08.jpg" /></p>
-<p>Moren min hakker løken.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/08.jpg" /></p>
+<p>Thabo heeft zijn haar geknipt.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/09.jpg" /></p>
-<p>Hakket løk får meg til å gråte.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/09.jpg" /></p>
+<p>Themba heeft zijn haar geschoren.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="å-lage-mat-1">Å lage mat</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Kathy Arbuckle<br> <strong>Translation:</strong> Espen Stranger-Johannessen<br> <strong>Language:</strong> Norwegian<br>
+<h2 id="haar-1">Haar</h2>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Sacha Kalseth<br> <strong>Language:</strong> Dutch<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/cooking'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/hair'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
