--- a/stories/nn/0067_å-laga-mat_slides.html
+++ b/stories/nn/0067_å-laga-mat_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/06.jpg" /></p>
-<p>Eg kuttar opp squashen.</p>
+<p>Eg kuttar opp graskaret.</p>
 <center>
 <strong>5</strong>
 </center>
