--- a/stories/index.html
+++ b/stories/index.html
@@ -1626,6 +1626,12 @@
       <td><a name="nl0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0120</td>
+      <td><a href="/stories/nl/0120_haar_slides.html" target="_blank">Haar</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0120"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0129</td>
       <td><a href="/stories/nl/0129_lui-broertje_slides.html" target="_blank">Lui broertje</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1636,6 +1642,12 @@
       <td><a href="/stories/nl/0136_hamisis-geluksdag_slides.html" target="_blank">Hamisi’s geluksdag</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="nl0136"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0156</td>
+      <td><a href="/stories/nl/0156_de-krokodil-die-honger-had_slides.html" target="_blank">De krokodil die honger had</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQXlkTjlCTlFMVEU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="nl0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0231</td>
@@ -6925,7 +6937,7 @@
       <td>0120</td>
       <td><a href="http://africanstorybook.org/stories/hair">Hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0120">ar</a>, <a href="#bn0120">bn</a>, <a href="#de0120">de</a>, <a href="#es0120">es</a>, <a href="#fa0120">fa</a>, <a href="#gu0120">gu</a>, <a href="#hi0120">hi</a>, <a href="#hu0120">hu</a>, <a href="#it0120">it</a>, <a href="#ja0120">ja</a>, <a href="#ko0120">ko</a>, <a href="#nb0120">nb</a>, <a href="#nn0120">nn</a>, <a href="#pa0120">pa</a>, <a href="#pl0120">pl</a>, <a href="#tl0120">tl</a>, <a href="#tr0120">tr</a>, <a href="#ur0120">ur</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
+      <td><a href="#ar0120">ar</a>, <a href="#bn0120">bn</a>, <a href="#de0120">de</a>, <a href="#es0120">es</a>, <a href="#fa0120">fa</a>, <a href="#gu0120">gu</a>, <a href="#hi0120">hi</a>, <a href="#hu0120">hu</a>, <a href="#it0120">it</a>, <a href="#ja0120">ja</a>, <a href="#ko0120">ko</a>, <a href="#nb0120">nb</a>, <a href="#nl0120">nl</a>, <a href="#nn0120">nn</a>, <a href="#pa0120">pa</a>, <a href="#pl0120">pl</a>, <a href="#tl0120">tl</a>, <a href="#tr0120">tr</a>, <a href="#ur0120">ur</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
     </tr>
     <tr>
       <td>0121</td>
@@ -7015,7 +7027,7 @@
       <td>0156</td>
       <td><a href="http://africanstorybook.org/stories/hungry-crocodile">The hungry crocodile</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0156">ar</a>, <a href="#bn0156">bn</a>, <a href="#ca0156">ca</a>, <a href="#de0156">de</a>, <a href="#es0156">es</a>, <a href="#fa0156">fa</a>, <a href="#gu0156">gu</a>, <a href="#hu0156">hu</a>, <a href="#it0156">it</a>, <a href="#ja0156">ja</a>, <a href="#ko0156">ko</a>, <a href="#nb0156">nb</a>, <a href="#nn0156">nn</a>, <a href="#pa0156">pa</a>, <a href="#pl0156">pl</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#tr0156">tr</a>, <a href="#ur0156">ur</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
+      <td><a href="#ar0156">ar</a>, <a href="#bn0156">bn</a>, <a href="#ca0156">ca</a>, <a href="#de0156">de</a>, <a href="#es0156">es</a>, <a href="#fa0156">fa</a>, <a href="#gu0156">gu</a>, <a href="#hu0156">hu</a>, <a href="#it0156">it</a>, <a href="#ja0156">ja</a>, <a href="#ko0156">ko</a>, <a href="#nb0156">nb</a>, <a href="#nl0156">nl</a>, <a href="#nn0156">nn</a>, <a href="#pa0156">pa</a>, <a href="#pl0156">pl</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#tr0156">tr</a>, <a href="#ur0156">ur</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
     </tr>
     <tr>
       <td>0158</td>
