--- a/stories/nb/0067_å-lage-mat.html
+++ b/stories/nb/0067_å-lage-mat.html
@@ -77,7 +77,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>norsk</div><div class="pageb
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/06.jpg" /></p>
 
-<p>Jeg kutter opp squashen.</p>
+<p>Jeg kutter opp gresskaret.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
