--- a/stories/nn/0067_å-laga-mat.html
+++ b/stories/nn/0067_å-laga-mat.html
@@ -77,7 +77,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>nynorsk</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/06.jpg" /></p>
 
-<p>Eg kuttar opp squashen.</p>
+<p>Eg kuttar opp graskaret.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
